--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
   <div class="home-body body">
     <div class="home-feed">
-      <div class="add-feed-content">
-        <div>
-          <div>
-            <input type="text">
+      <div class="feed-add-content">
+        <div class="feed-add">
+          <div class="input">
+            <textarea id="feedAddContent"></textarea>
           </div>
-          <div>
-            <button>Post to feed</button>
+          <div class="post-to-feed">
+            <button id="postToFeed">Post to feed</button>
           </div>
         </div>
       </div>
