--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Social Network Test</title>
-  <link rel="stylesheet"
-        href="style.css">
-  <link rel="stylesheet"
-        href="feed.css">
-  <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
-        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
-        crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="feed.css">
+  <link rel="stylesheet" href="createProfile.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 </head>
 
@@ -45,16 +41,33 @@
           <div class="feed-login-btn">
             <button id="feedLoginBtn" onclick="userLogIn()">Log In</button>
             <div>New iuser?</div>
-            <button id="feedCreateBtn">Create Profile</button>
+            <button id="feedCreateBtn" onclick="showCreateProfileModal()">Create Profile</button>
           </div>
         </div>
       </div>
-
       <div class="feed-content" id="feedContent"></div>
       <!-- POSTS WILL SHOW UP HERE -->
     </div>
     <div class="home-landing-createProfile"></div>
   </div>
+
+  <!-- CREATE NEW PROFILE MODAL -->
+  <div class="create-profile-modal" id="createProfileModal">
+    <div class="create-profile-content">
+        <button class="close-create-profile-modal" id="closeCreateProfileModal" onclick="hideCreateProfileModal()"><i class="fa fa-times"></i></button>
+      <div class="create-profile-info">
+        <input type="text" placeholder="First Name" id="createFirstName">
+        <input type="text" placeholder="Last Name" id="createLastName">
+        <input type="text" placeholder="Password" id="createPassword">
+        <input type="text" placeholder="Re-enter Password" id="createPasswordCheck">
+      </div>
+      <div class="create-profile-enter">
+        <button>Create Profile</button>
+      </div>
+    </div>
+  </div>
+
+
   <script src="scripts.js"></script>
 </body>
 
