--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Social Network Test</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="feed.css">
-  <link rel="stylesheet" href="createProfile.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
-    crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <link rel="stylesheet"
+        href="style.css">
+  <link rel="stylesheet"
+        href="feed.css">
+  <link rel="stylesheet"
+        href="createProfile.css">
+  <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+        crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+          crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 </head>
 
@@ -27,42 +33,112 @@
 
   <div class="home-body body">
     <div class="home-feed">
-      <div class="feed-add-content" id="feedAddContent">
+      <div class="feed-add-content"
+           id="feedAddContent">
         <!-- NEW POST CONTENT GOES HERE IF USER IS LOGGED IN -->
       </div>
 
-      <div class="feed-login-content" id="feedLoginContent">
+      <div class="feed-login-content"
+           id="feedLoginContent">
         <!-- THIS GETS HIDDEN IF THE USER IS LOGGED IN -->
         <div class="feed-login">
           <div class="feed-inputs">
-            <input type="text" placeholder="Last Name" id="logInLastName">
-            <input type="password" placeholder="Password" id="logInPassword">
+            <div class="input-container">
+              <input type="text"
+                     required
+                     id="logInLastName">
+              <span class="one"></span>
+              <label class="label">Last Name</label>
+            </div>
+            <div class="input-container">
+              <input type="password"
+                     required
+                     id="logInPassword">
+              <span class="one"></span>
+              <label class="label">Password</label>
+            </div>
+
+            <!-- <input type="text"
+                   placeholder="Last Name"
+                   id="logInLastName"> -->
+            <!-- <input type="password"
+                   placeholder="Password"
+                   id="logInPassword"> -->
           </div>
           <div class="feed-login-btn">
-            <button id="feedLoginBtn" onclick="userLogIn()">Log In</button>
+            <button id="feedLoginBtn"
+                    onclick="userLogIn()">Log In</button>
             <div>New iuser?</div>
-            <button id="feedCreateBtn" onclick="showCreateProfileModal()">Create Profile</button>
+            <button id="feedCreateBtn"
+                    onclick="showCreateProfileModal()">Create Profile</button>
+          </div>
+          <div class="save-login">
+            <input type="checkbox" id="saveLogInConfirm">
+            <div>Save Login Info</div>
           </div>
         </div>
       </div>
-      <div class="feed-content" id="feedContent"></div>
+      <div class="feed-content"
+           id="feedContent"></div>
       <!-- POSTS WILL SHOW UP HERE -->
     </div>
     <div class="home-landing-createProfile"></div>
   </div>
 
   <!-- CREATE NEW PROFILE MODAL -->
-  <div class="create-profile-modal" id="createProfileModal">
+  <div class="create-profile-modal"
+       id="createProfileModal">
     <div class="create-profile-content">
-        <button class="close-create-profile-modal" id="closeCreateProfileModal" onclick="hideCreateProfileModal()"><i class="fa fa-times"></i></button>
+      <button class="close-create-profile-modal"
+              id="closeCreateProfileModal"
+              onclick="hideCreateProfileModal()">
+        <i class="fa fa-times"></i>
+      </button>
       <div class="create-profile-info">
-        <input type="text" placeholder="First Name" id="createFirstName">
-        <input type="text" placeholder="Last Name" id="createLastName">
-        <input type="text" placeholder="Password" id="createPassword">
-        <input type="text" placeholder="Re-enter Password" id="createPasswordCheck">
+        <div class="input-container">
+          <input type="text"
+                 required
+                 id="createFirstName">
+          <span class="one"></span>
+          <label class="label">First Name</label>
+        </div>
+        <div class="input-container">
+          <input type="text"
+                 required
+                 id="createLastName">
+          <span class="one"></span>
+          <label class="label">Last Name</label>
+        </div>
+        <div class="input-container">
+          <input type="password"
+                 required
+                 id="createPassword">
+          <span class="one"></span>
+          <label class="label">Password</label>
+        </div>
+        <div class="input-container">
+          <input type="password"
+                 required
+                 id="createPasswordCheck">
+          <span class="one"></span>
+          <label class="label">Re-enter Password</label>
+        </div>
+
+        <!-- <input type="text"
+               placeholder="First Name"
+               id="createFirstName">
+        <input type="text"
+               placeholder="Last Name"
+               id="createLastName">
+        <input type="text"
+               placeholder="Password"
+               id="createPassword">
+        <input type="text"
+               placeholder="Re-enter Password"
+               id="createPasswordCheck"> -->
       </div>
       <div class="create-profile-enter">
-        <button>Create Profile</button>
+        <button onclick="createNewUserProfile()">Create Profile</button>
       </div>
     </div>
   </div>
