--- a/index.html
+++ b/index.html
@@ -57,13 +57,6 @@
               <span class="one"></span>
               <label class="label">Password</label>
             </div>
-
-            <!-- <input type="text"
-                   placeholder="Last Name"
-                   id="logInLastName"> -->
-            <!-- <input type="password"
-                   placeholder="Password"
-                   id="logInPassword"> -->
           </div>
           <div class="feed-login-btn">
             <button id="feedLoginBtn"
@@ -77,6 +70,9 @@
             <div>Save Login Info</div>
           </div>
         </div>
+      </div>
+      <div class="feed-welcome-Content" id="feedWelcomeContent">
+        HELLO, WORLD!
       </div>
       <div class="feed-content"
            id="feedContent"></div>
@@ -123,23 +119,11 @@
           <span class="one"></span>
           <label class="label">Re-enter Password</label>
         </div>
-
-        <!-- <input type="text"
-               placeholder="First Name"
-               id="createFirstName">
-        <input type="text"
-               placeholder="Last Name"
-               id="createLastName">
-        <input type="text"
-               placeholder="Password"
-               id="createPassword">
-        <input type="text"
-               placeholder="Re-enter Password"
-               id="createPasswordCheck"> -->
       </div>
       <div class="create-profile-enter">
         <button onclick="createNewUserProfile()">Create Profile</button>
       </div>
+      <div class="create-profile-alert" id="createProfileAlert"></div>
     </div>
   </div>
 
