--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet"
         href="createProfile.css">
   <link rel="stylesheet"
+        href="userAuthedIn.css">
+  <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
@@ -32,17 +34,12 @@
   </div>
 
   <div class="home-body body">
-    <div class="home-feed">
-      <div class="feed-add-content"
-           id="feedAddContent">
-        <!-- NEW POST CONTENT GOES HERE IF USER IS LOGGED IN -->
-      </div>
-
+    <div class="home-welcome-not-authenticated">
       <!-- THIS GETS HIDDEN IF THE USER IS LOGGED IN -->
-      <div class="feed-login-content"
-           id="feedLoginContent">
-        <div class="feed-login">
-          <div class="feed-inputs">
+      <div class="welcome-login-content"
+           id="welcomeLoginContent">
+        <div class="welcome-login">
+          <div class="welcome-inputs">
             <div class="input-container">
               <input type="text"
                      required
@@ -58,11 +55,11 @@
               <label class="label">Password</label>
             </div>
           </div>
-          <div class="feed-login-btn">
-            <button id="feedLoginBtn"
+          <div class="welcome-login-btn">
+            <button id="welcomeLoginBtn"
                     onclick="userLogIn()">Log In</button>
             <div>New iuser?</div>
-            <button id="feedCreateBtn"
+            <button id="welcomeCreateBtn"
                     onclick="showCreateProfileModal()">Create Profile</button>
           </div>
           <div class="save-login">
@@ -71,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="feed-welcome-content" id="feedWelcomeContent">
+      <div class="welcome-welcome-content" id="welcomeWelcomeContent">
         <div class="welcome-text">
           <div class="welcome-to">
             Welcome to the
@@ -87,12 +84,19 @@
         </div>
       </div>
       <!-- THIS GETS HIDDEN IF THE USER IS LOGGED IN -->
-
-      <div class="feed-content"
-           id="feedContent"></div>
-      <!-- POSTS WILL SHOW UP HERE -->
     </div>
-    <div class="home-landing-createProfile"></div>
+    <div class="home-welcome-authenticated">
+      <div class="welcome-user-container">
+        <div id="welcomeUserContent"></div>
+      </div>
+      <div class="feed-container">
+        <div id="feedContent"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="welcome-corner-profile">
+
   </div>
 
   <!-- CREATE NEW PROFILE MODAL -->
@@ -147,6 +151,7 @@
 
 
   <script src="scripts.js"></script>
+  <script src="authedUserScript.js"></script>
 </body>
 
 </html>
