--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="input-container">
               <input type="text"
                      required
-                     id="logInLastName">
+                     id="logInEmail">
               <span class="one"></span>
-              <label class="label">Last Name</label>
+              <label class="label">Email</label>
             </div>
             <div class="input-container">
               <input type="password"
@@ -123,6 +123,13 @@
           <span class="one"></span>
           <label class="label">Last Name</label>
         </div>
+        <div class="input-container">
+            <input type="text"
+                   required
+                   id="createEmail">
+            <span class="one"></span>
+            <label class="label">Email</label>
+          </div>
         <div class="input-container">
           <input type="password"
                  required
