--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div id="feedContent"></div>
       </div>
     </div>
+    <div class="profile-iframe-container" id="profileIframeContainer"></div>
   </div>
 
   <div class="welcome-corner-profile">
@@ -158,6 +159,7 @@
 
 
   <script src="scripts.js"></script>
+  <!-- <script src="profile.js"></script> -->
 </body>
 
 </html>
