--- a/profilePage.html
+++ b/profilePage.html
@@ -7,16 +7,28 @@
   <link rel="stylesheet"
         href="style.css">
   <link rel="stylesheet"
+        href="feed.css">
+  <link rel="stylesheet"
+        href="createProfile.css">
+  <link rel="stylesheet"
+        href="userAuthedIn.css">
+  <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
-  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+          crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 </head>
 
 <body>
   <div class="profile-body body">
+    Hello World!
+    <div id="profileContent"></div>
   </div>
-  <script src="scripts.js"></script>
+  <!-- <script src="scripts.js"></script> -->
+  <script src="profile.js"></script>
 </body>
 
 </html>
