--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       <div class="feed-container">
         <div id="feedContent"></div>
       </div>
+      <button class="close-profile" onclick="closeProfile()"><i class="fa fa-times"></i></button>
     </div>
     <div class="profile-iframe-container" id="profileIframeContainer"></div>
   </div>
