--- a/profilePage.html
+++ b/profilePage.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet"
         href="userAuthedIn.css">
   <link rel="stylesheet"
+        href="profile.css">
+  <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
@@ -23,9 +25,10 @@
 </head>
 
 <body>
-  <div class="profile-body body">
-    Hello World!
-    <div id="profileContent"></div>
+  <div class="profile-body">
+    <div id="profileContent">
+          
+    </div>
   </div>
   <!-- <script src="scripts.js"></script> -->
   <script src="profile.js"></script>
