--- a/profilePage.html
+++ b/profilePage.html
@@ -27,7 +27,11 @@
 <body>
   <div class="profile-body">
     <div id="profileContent">
-          
+      <div class="profile-header" id="profileHeader">
+        <div class="profile-img" id="profileImg"></div>
+        <div class="profile-name" id="profileName"></div>
+      </div>
+      <div class="profile-posts" id="profilePosts"></div>
     </div>
   </div>
   <!-- <script src="scripts.js"></script> -->
