--- a/profilePage.html
+++ b/profilePage.html
@@ -30,7 +30,11 @@
       <div class="profile-header" id="profileHeader">
         <div class="profile-img" id="profileImg"></div>
         <div class="profile-name" id="profileName"></div>
+        <div class="profile-edit" id="profileEdit"></div>
       </div>
+      <div class="profile-posts-header">About</div>
+
+      <div class="profile-posts-header">Posts</div>
       <div class="profile-posts" id="profilePosts"></div>
     </div>
   </div>
