--- a/profilePage.html
+++ b/profilePage.html
@@ -33,7 +33,7 @@
         <div class="profile-edit" id="profileEdit"></div>
       </div>
       <div class="profile-posts-header">About</div>
-
+      <div class="profile-about" id="profileAbout"></div>
       <div class="profile-posts-header">Posts</div>
       <div class="profile-posts" id="profilePosts"></div>
     </div>
