--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         </div>
       </div>
       <button class="adjust-size-btn" onclick="adjustSize()"><i class="fa fa-chevron-left"></i></button>
-      <div class="home-authenticated-right"></div>
+      <div class="home-authenticated-right">
+        <div class="welcome-people-container" id="welcomePeopleContainer"></div>
+      </div>
       <button class="close-profile" onclick="closeProfile()"><i class="fa fa-times"></i></button>
     </div>
     <div class="profile-iframe-container" id="profileIframeContainer"></div>
